--- a/index.html
+++ b/index.html
@@ -9,5 +9,55 @@
     <link rel="stylesheet" href="prod-assets/style.css">
 </head>
 
+<header class="t-site-header">
+    <div class="t-site-header__top">
+        <div class="o-container">
+            <div class="o-row o-row--center-y">
+                <div class="o-col o-col--lg75 t-site-header__menu">
+                    <div class="c-nav">
+                        <a href="#" class="c-nav__item">Home</a>
+                        <a href="#" class="c-nav__item">Dla Niej</a>
+                        <a href="#" class="c-nav__item">Dla Niego</a>
+                        <a href="#" class="c-nav__item">Akcesiora</a>
+                        <a href="#" class="c-nav__item">O sklepie</a>
+                        <a href="#" class="c-nav__item">Kontakt</a>
+                    </div>
+                </div>
+                <div class="o-col o-col--lg25">
+                    <div class="t-site-header__icons">
+                        <div class="t-site-header__icon">
+                            <img src="images/m_loupe.png" alt="loupe">
+                        </div>
+                        <div class="t-site-header__icon">
+                            <img src="images/m_star.png" alt="star">
+                            <span class="t-site-header__number">1</span>
+                        </div>
+                        <div class="t-site-header__icon">
+                            <img src="images/m_cart.png" alt="cart">
+                            <span class="t-site-header__number">2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="t-site-header__hero">
+        <div class="o-container">
+            <div class="o-row">
+                <div class="o-col t-site-header__hero-right">
+                    <span class="t-site-header__intro-text">Odkryj naszą najnowszą</span>
+                    <h1 class="c-heading c-heading--level1">Spring Colection 2019</h1>
+                    <a class="c-btn c-btn--light t-site-header__cta" href="#">Na zakupy
+                        <span class="c-btn__icon">
+                            <img src="images/btn-arrow--small.png" alt="">
+                        </span>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
 </body>
 </html>
