add section product list

--- a/index.html
+++ b/index.html
@@ -59,5 +59,170 @@
     </div>
 </header>
 
+<!-- Section product list -->
+<section class="t-product-list">
+    <div class="o-container">
+        <div class="o-row">
+            <div class="o-col u-text-center">
+                <div class="c-product-selector">
+                    <a class="c-product-selector__item u-accent" href="#">Nowe produkty</a>
+                    <a class="c-product-selector__item" href="#">Polecane produkty</a>
+                    <a class="c-product-selector__item" href="#">Promocje</a>
+                </div>
+            </div>
+        </div>
+        <!-- pierwszy wiersz produktow -->
+        <div class="o-row">
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_1.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                            <div class="c-product-card__colors">
+                                <span class="c-product-card__color c-product-card__color--one"></span>
+                                <span class="c-product-card__color c-product-card__color--two"></span>
+                                <span class="c-product-card__color c-product-card__color--three"></span>
+                            </div>
+                        </div>
+                        <span class="c-product-card__price">89</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_2.jpg" alt="produkt 1">
+                        <div class="c-product-card__cart">
+                            <span class="c-product-card__cart-icon">
+                                <img src="images/star_small.png" alt="">
+                            </span>
+                            <span class="c-product-card__cart-text">Do koszyka</span>
+                            <span class="c-product-card__cart-icon">
+                                <img src="images/arrow-right.png" alt="">
+                            </span>
+                        </div>
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                            <div class="c-product-card__colors">
+                                <span class="c-product-card__color c-product-card__color--two"></span>
+                                <span class="c-product-card__color c-product-card__color--three"></span>
+                            </div>
+                        </div>
+                        <span class="c-product-card__price">245</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_3.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                            <div class="c-product-card__colors">
+                                <span class="c-product-card__color c-product-card__color--four"></span>
+                                <span class="c-product-card__color c-product-card__color--five"></span>
+                                <span class="c-product-card__color c-product-card__color--six"></span>
+                            </div>
+                        </div>
+                        <span class="c-product-card__price">23</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_4.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                        </div>
+                        <span class="c-product-card__price">130</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="o-row">
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_5.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                        </div>
+                        <span class="c-product-card__price">201</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_6.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                        </div>
+                        <span class="c-product-card__price">93</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_7.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                        </div>
+                        <span class="c-product-card__price">45</span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--lg25">
+                <div class="c-product-card">
+                    <div class="c-product-card__top">
+                        <img class="c-product-card__picture" src="images/products/p_8.jpg" alt="produkt 1">
+                    </div>
+                    <div class="c-product-card__bottom">    
+                        <div class="c-product-card__meta">
+                            <div class="c-product-card__name">Short summer dress</div>
+                            <div class="c-product-card__colors">
+                                <span class="c-product-card__color c-product-card__color--seven"></span>
+                                <span class="c-product-card__color c-product-card__color--eight"></span>
+                                <span class="c-product-card__color c-product-card__color--nine"></span>
+                            </div>
+                        </div>
+                        <span class="c-product-card__price">123</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Pagination -->
+        <div class="o-row">
+            <div class="o-col u-text-center">
+                <div class="c-pagination">
+                    <a class="c-pagination__item" href="#">&lt;</a>
+                    <a class="c-pagination__item u-accent" href="#">1</a>
+                    <a class="c-pagination__item" href="#">2</a>
+                    <a class="c-pagination__item" href="#">...</a>
+                    <a class="c-pagination__item" href="#">15</a>
+                    <a class="c-pagination__item" href="#">&gt;</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
