add newsletter section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
                 </div>
             </div>
         </div>
-        <!-- pierwszy wiersz produktow -->
         <div class="o-row">
             <div class="o-col o-col--lg25">
                 <div class="c-product-card">
@@ -224,7 +223,7 @@
     </div>
 </section>
 
-<!--  -->
+<!-- Promoted section -->
 <div class="o-container">
     <div class="t-promoted">
         <div class="o-row">
@@ -263,6 +262,29 @@
         </div>
     </div>
 </div>
+
+<!-- Section Newsletter -->
+<div class="o-container">
+    <div class="t-newsletter">
+        <div class="o-row">
+            <div class="o-col">
+                <div class="t-newsletter__wrapper">
+                    <div class="t-newsletter__info">
+                        <span class="t-newsletter__heading">Zapisz sie do newslettera</span>
+                        <span class="t-newsletter__subheading">Zapisz sie do newslettera i otrzymaj 10% zniżki na zakupy</span>
+                    </div>
+                    <div class="t-newsletter__form">
+                        <form action="">
+                            <input type="email" class="c-input c-input--newsletter t-newsletter__input" placeholder="Wprowadź adres e-mail">
+                            <input type="submit" class="c-btn c-btn--accent t-newsletter__submit" value="Zapisz">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
