--- a/index.html
+++ b/index.html
@@ -285,6 +285,41 @@
     </div>
 </div>
 
+<!-- Section Information -->
+<div class="t-shopper-info">
+    <div class="o-container">
+        <div class="o-row">
+            <div class="o-col o-col--md50 o-col--lg25 t-shopper-info__item">
+                <div class="c-icon-box">
+                    <img class="c-icon-box__image" src="images/zaleta-1.png" alt="Zaleta-1">
+                    <span class="c-icon-box__name">30 dni na zwrot</span>
+                    <span class="c-icon-box__info">Bez żadnych wyjątków</span>
+                </div>
+            </div>
+            <div class="o-col o-col--md50 o-col--lg25 t-shopper-info__item">
+                <div class="c-icon-box">
+                    <img class="c-icon-box__image" src="images/zaleta-2.png" alt="Zaleta-2">
+                    <span class="c-icon-box__name">30 dni na zwrot</span>
+                    <span class="c-icon-box__info">Bez żadnych wyjątków</span>
+                </div>
+            </div>
+            <div class="o-col o-col--md50 o-col--lg25 t-shopper-info__item">
+                <div class="c-icon-box">
+                    <img class="c-icon-box__image" src="images/zaleta-3.png" alt="Zaleta-3">
+                    <span class="c-icon-box__name">30 dni na zwrot</span>
+                    <span class="c-icon-box__info">Bez żadnych wyjątków</span>
+                </div>
+            </div>
+            <div class="o-col o-col--md50 o-col--lg25 t-shopper-info__item">
+                <div class="c-icon-box">
+                    <img class="c-icon-box__image" src="images/zaleta-4.png" alt="Zaleta-4">
+                    <span class="c-icon-box__name">30 dni na zwrot</span>
+                    <span class="c-icon-box__info">Bez żadnych wyjątków</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
