--- a/index.html
+++ b/index.html
@@ -321,5 +321,60 @@
     </div>
 </div>
 
+<!-- Footer-->
+
+<footer class="t-site-footer">
+    <div class="o-container">
+        <div class="o-row">
+            <div class="o-col o-col--md50 o-col--lg33">
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__address">
+                        <h3 class="c-heading c-heaging--level3 c-heading--white">O naszym sklepie</h3>
+                        <p class="t-site-footer__text t-site-footer__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nam dolore consequatur non, quas nam dolore consequatur non.</p>
+                        <span class="t-site-footer__text"><strong>Ul. Wymianowska 32/7, 48-930 Wrocław</strong></span>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--md50 o-col--lg33">
+                <div class="t-site-footer__item">
+                    <div class="t-site-footer__links">
+                        <div class="t-site-footer__links-first">
+                            <a class="t-site-footer__link" href="#">Home</a>
+                            <a class="t-site-footer__link" href="#">O nas</a>
+                            <a class="t-site-footer__link" href="#">Blog</a>
+                            <a class="t-site-footer__link" href="#">Kontakt</a>
+                            <a class="t-site-footer__link" href="#">FAQ</a>
+                        </div>
+                        <div class="t-site-footer__links-second">
+                            <a class="t-site-footer__link" href="#">Polityka prywatności</a>
+                            <a class="t-site-footer__link" href="#">Zwroty</a>
+                            <a class="t-site-footer__link" href="#">Promocje</a>
+                            <a class="t-site-footer__link" href="#">Twoje zamówienie</a>
+                            <a class="t-site-footer__link" href="#">Media społecznościowe</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="o-col o-col--md50 o-col--lg33">
+                <div class="t-site-footer__item t-site-footer__item-last">
+                    <span class="t-site-footer__text">Znajdź nas na instagramie</span>
+                    <div class="t-site-footer__instagrams">
+                        <img class="t-site-footer__instagram" src="images/insta-1.jpg" alt="insta-1">
+                        <img class="t-site-footer__instagram" src="images/insta-2.jpg" alt="insta-2">
+                        <img class="t-site-footer__instagram" src="images/insta-3.jpg" alt="insta-3">
+                        <img class="t-site-footer__instagram" src="images/insta-4.jpg" alt="insta-4">
+                    </div>
+                    <span class="t-site-footer__text">store-website@site.pl | +48 000-000-000</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="t-site-footer__copy">
+        <div class="o-container u-text-center">
+                &copy; Copyright BRN94 2019 - Course from StrefaKursow
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
